# cfi-decoder

./: .gitignore  README.md  main.py  pyproject.toml
src/cfi_decoder/: __init__.py  _data.py  _decode.py
tests/: test_data.py  test_decode.py
