[project]
name = "cfi-decoder"
version = "0.1.0"
description = "Offline decoder for ISO 10962 CFI (Classification of Financial Instruments) codes"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Arian Šajina" }]
keywords = ["cfi", "decoder", "iso-10962", "finance", "classification", "financial-instruments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ariansajina/cfi-decoder"
Issues = "https://github.com/ariansajina/cfi-decoder/issues"

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
